ARMTemplates-Deployment/DSVM/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_WinDSVM_name": {
            "defaultValue": "WinDSVM",
            "type": "String"
        },
        "virtualNetworks_demo_vnet_name": {
            "defaultValue": "demo-vnet",
            "type": "String"
        },
        "vaults_phillyts1057880103_name": {
            "defaultValue": "phillyts1057880103",
            "type": "String"
        },
        "networkInterfaces_windsvm74_name": {
            "defaultValue": "windsvm74",
            "type": "String"
        },
        "publicIPAddresses_WinDSVM_ip_name": {
            "defaultValue": "WinDSVM-ip",
            "type": "String"
        },
        "components_phillyts2504095399_name": {
            "defaultValue": "phillyts2504095399",
            "type": "String"
        },
        "networkSecurityGroups_WinDSVM_nsg_name": {
            "defaultValue": "WinDSVM-nsg",
            "type": "String"
        },
        "storageAccounts_phillyts5063290931_name": {
            "defaultValue": "phillyts5063290931",
            "type": "String"
        },
        "workspaces_phillyTS_name": {
            "defaultValue": "phillyTS",
            "type": "String"
        },
        "registries_phillyts1857375777_name": {
            "defaultValue": "phillyts1857375777",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "alertrules_Failure_Anomalies___phillyts2504095399_name": {
            "defaultValue": "Failure Anomalies - phillyts2504095399",
            "type": "String"
        },
        "securityRules_RDP_name": {
            "defaultValue": "RDP",
            "type": "String"
        },
        "secrets_workspace_secrets_390c1e10_c48d_4111_9028_c780380023d8_name": {
            "defaultValue": "workspace-secrets-390c1e10-c48d-4111-9028-c780380023d8",
            "type": "String"
        },
        "secrets_390c1e10_c48d_4111_9028_c780380023d8_IfOffk4YBCooCAPVL_1maOe_51zGDJ4HlVcd3Nf1W9s_name": {
            "defaultValue": "390c1e10-c48d-4111-9028-c780380023d8-IfOffk4YBCooCAPVL-1maOe-51zGDJ4HlVcd3Nf1W9s",
            "type": "String"
        },
        "secrets_390c1e10_c48d_4111_9028_c780380023d8_sBD_jGyZnorPUkbgwP2GSOFttvoIIlRwt7FR8kw9aGs_name": {
            "defaultValue": "390c1e10-c48d-4111-9028-c780380023d8-sBD-jGyZnorPUkbgwP2GSOFttvoIIlRwt7FR8kw9aGs",
            "type": "String"
        },
        "virtualMachines_WinDSVM_id": {
            "defaultValue": "/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.Compute/disks/WinDSVM_OsDisk_1_50d9bea7f0034dc49a6ddaa50dd67333",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.Compute/virtualMachines/WinDSVM'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_WinDSVM_name')]",
            "apiVersion": "2018-10-01",
            "location": "eastus2",
            "tags": {},
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS4_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "microsoft-dsvm",
                        "offer": "dsvm-windows",
                        "sku": "server-2016",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_WinDSVM_name'),'_OsDisk_1_50d9bea7f0034dc49a6ddaa50dd67333')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS",
                            "id": "[parameters('virtualMachines_WinDSVM_id')]"
                        },
                        "diskSizeGB": 127
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_WinDSVM_name')]",
                    "adminUsername": "davew",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_windsvm74_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_windsvm74_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.ContainerRegistry/registries/phillyts1857375777'.",
            "type": "Microsoft.ContainerRegistry/registries",
            "sku": {
                "name": "Basic",
                "tier": "Basic"
            },
            "name": "[parameters('registries_phillyts1857375777_name')]",
            "apiVersion": "2017-10-01",
            "location": "eastus2",
            "tags": {},
            "scale": null,
            "properties": {
                "adminUserEnabled": true
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/microsoft.insights/alertrules/Failure Anomalies - phillyts2504095399'.",
            "type": "microsoft.insights/alertrules",
            "name": "[parameters('alertrules_Failure_Anomalies___phillyts2504095399_name')]",
            "apiVersion": "2014-04-01",
            "location": "East US",
            "tags": {
                "hidden-link:/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/microsoft.insights/components/phillyts2504095399": "Resource"
            },
            "scale": null,
            "properties": {
                "name": "[parameters('alertrules_Failure_Anomalies___phillyts2504095399_name')]",
                "description": "",
                "isEnabled": true,
                "condition": {
                    "odata.type": "Microsoft.Azure.Management.Insights.Models.ThresholdRuleCondition",
                    "dataSource": {
                        "odata.type": "Microsoft.Azure.Management.Insights.Models.RuleMetricDataSource",
                        "resourceUri": "[resourceId('microsoft.insights/components', parameters('components_phillyts2504095399_name'))]",
                        "metricNamespace": null,
                        "metricName": "advanced::A3108E3D-5E26-44CF-B232-783F5E20EF10::ewAiAEgAeQBwAGUAcgBpAG8AbgBBAHAAcABsAGkAYwBhAHQAaQBvAG4AUwBpAGQAIgA6AG4AdQBsAGwALAAiAEgAeQBwAGUAcgBpAG8AbgBTAHUAYgBqAGUAYwB0AFMAaQBkACIAOgBuAHUAbABsACwAIgBIAHkAcABlAHIAaQBvAG4ATwBiAHMAZQByAHYAZQByAFMAaQBkACIAOgBuAHUAbABsACwAIgBDAHUAcwB0AG8AbQBlAHIAQQBjAGMAbwB1AG4AdABJAGQAIgA6ACIAMAAwADAAMAAwADAAMAAwAC0AMAAwADAAMAAtADAAMAAwADAALQAwADAAMAAwAC0AMAAwADAAMAAwADAAMAAwADAAMAAwADAAIgAsACIAQQBwAHAAbABpAGMAYQB0AGkAbwBuA [...]
                    },
                    "operator": "GreaterThan",
                    "threshold": 2,
                    "windowSize": "PT1H"
                },
                "action": {
                    "odata.type": "Microsoft.Azure.Management.Insights.Models.RuleEmailAction",
                    "sendToServiceOwners": true,
                    "customEmails": []
                }
            },
            "dependsOn": [
                "[resourceId('microsoft.insights/components', parameters('components_phillyts2504095399_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/microsoft.insights/components/phillyts2504095399'.",
            "type": "microsoft.insights/components",
            "kind": "web",
            "name": "[parameters('components_phillyts2504095399_name')]",
            "apiVersion": "2015-05-01",
            "location": "eastus",
            "tags": {},
            "scale": null,
            "properties": {
                "Application_Type": "web",
                "Flow_Type": null,
                "Request_Source": null,
                "HockeyAppId": null,
                "SamplingPercentage": null
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.KeyVault/vaults/phillyts1057880103'.",
            "type": "Microsoft.KeyVault/vaults",
            "name": "[parameters('vaults_phillyts1057880103_name')]",
            "apiVersion": "2016-10-01",
            "location": "eastus2",
            "tags": {},
            "scale": null,
            "properties": {
                "sku": {
                    "family": "A",
                    "name": "Standard"
                },
                "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
                "accessPolicies": [
                    {
                        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
                        "objectId": "cfd7adef-add0-42fb-8845-b5b096eb3275",
                        "permissions": {
                            "keys": [
                                "all"
                            ],
                            "secrets": [
                                "all"
                            ],
                            "certificates": [
                                "all"
                            ]
                        }
                    }
                ],
                "enabledForDeployment": true,
                "enabledForTemplateDeployment": true
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.MachineLearningServices/workspaces/phillyTS'.",
            "type": "Microsoft.MachineLearningServices/workspaces",
            "name": "[parameters('workspaces_phillyTS_name')]",
            "apiVersion": "2018-11-19",
            "location": "eastus2",
            "identity": {
                "principalId": "cfd7adef-add0-42fb-8845-b5b096eb3275",
                "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
                "type": "SystemAssigned"
            },
            "scale": null,
            "properties": {
                "friendlyName": "",
                "description": "",
                "storageAccount": "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_phillyts5063290931_name'))]",
                "containerRegistry": "[resourceId('Microsoft.ContainerRegistry/registries', parameters('registries_phillyts1857375777_name'))]",
                "keyVault": "[resourceId('Microsoft.KeyVault/vaults', parameters('vaults_phillyts1057880103_name'))]",
                "applicationInsights": "[resourceId('microsoft.insights/components', parameters('components_phillyts2504095399_name'))]",
                "discoveryUrl": "https://eastus2.experiments.azureml.net/discovery"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_phillyts5063290931_name'))]",
                "[resourceId('Microsoft.ContainerRegistry/registries', parameters('registries_phillyts1857375777_name'))]",
                "[resourceId('Microsoft.KeyVault/vaults', parameters('vaults_phillyts1057880103_name'))]",
                "[resourceId('microsoft.insights/components', parameters('components_phillyts2504095399_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.Network/networkInterfaces/windsvm74'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_windsvm74_name')]",
            "apiVersion": "2018-10-01",
            "location": "eastus2",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "a4e44c7a-ee12-4a01-a4ce-9e8e69e622f0",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"b2d3410c-e494-4681-977a-a10045d539e7\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_WinDSVM_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_demo_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "yewmbquojzzu3ixtqtua2fvpre.cx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-0E-C6-49",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_WinDSVM_nsg_name'))]"
                },
                "primary": true,
                "tapConfigurations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_WinDSVM_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_demo_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_WinDSVM_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.Network/networkSecurityGroups/WinDSVM-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_WinDSVM_nsg_name')]",
            "apiVersion": "2018-10-01",
            "location": "eastus2",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "c9c232f5-5e5b-4cd2-8d71-d4191d582ffc",
                "securityRules": [
                    {
                        "name": "RDP",
                        "etag": "W/\"ce434437-fe8d-441b-a39f-653632796cb5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"ce434437-fe8d-441b-a39f-653632796cb5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"ce434437-fe8d-441b-a39f-653632796cb5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"ce434437-fe8d-441b-a39f-653632796cb5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"ce434437-fe8d-441b-a39f-653632796cb5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"ce434437-fe8d-441b-a39f-653632796cb5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"ce434437-fe8d-441b-a39f-653632796cb5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.Network/publicIPAddresses/WinDSVM-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_WinDSVM_ip_name')]",
            "apiVersion": "2018-10-01",
            "location": "eastus2",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "c06ba58c-b6e2-4fa6-8879-0ab0529aab10",
                "ipAddress": "52.225.229.254",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.Network/virtualNetworks/demo-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_demo_vnet_name')]",
            "apiVersion": "2018-10-01",
            "location": "eastus2",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "c2c02cc1-4e8e-4e73-a2f3-84e80e16af8c",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"d13b2c26-46ba-4622-9ebe-f9159cb5e074\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.0.0/24",
                            "delegations": []
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.Storage/storageAccounts/phillyts5063290931'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_phillyts5063290931_name')]",
            "apiVersion": "2018-07-01",
            "location": "eastus2",
            "tags": {},
            "scale": null,
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": false,
                "encryption": {
                    "services": {
                        "file": {
                            "enabled": true
                        },
                        "blob": {
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.KeyVault/vaults/phillyts1057880103/secrets/390c1e10-c48d-4111-9028-c780380023d8-IfOffk4YBCooCAPVL-1maOe-51zGDJ4HlVcd3Nf1W9s'.",
            "type": "Microsoft.KeyVault/vaults/secrets",
            "name": "[concat(parameters('vaults_phillyts1057880103_name'), '/', parameters('secrets_390c1e10_c48d_4111_9028_c780380023d8_IfOffk4YBCooCAPVL_1maOe_51zGDJ4HlVcd3Nf1W9s_name'))]",
            "apiVersion": "2016-10-01",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "attributes": {
                    "enabled": true
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.KeyVault/vaults', parameters('vaults_phillyts1057880103_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.KeyVault/vaults/phillyts1057880103/secrets/390c1e10-c48d-4111-9028-c780380023d8-sBD-jGyZnorPUkbgwP2GSOFttvoIIlRwt7FR8kw9aGs'.",
            "type": "Microsoft.KeyVault/vaults/secrets",
            "name": "[concat(parameters('vaults_phillyts1057880103_name'), '/', parameters('secrets_390c1e10_c48d_4111_9028_c780380023d8_sBD_jGyZnorPUkbgwP2GSOFttvoIIlRwt7FR8kw9aGs_name'))]",
            "apiVersion": "2016-10-01",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "attributes": {
                    "enabled": true
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.KeyVault/vaults', parameters('vaults_phillyts1057880103_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.KeyVault/vaults/phillyts1057880103/secrets/workspace-secrets-390c1e10-c48d-4111-9028-c780380023d8'.",
            "type": "Microsoft.KeyVault/vaults/secrets",
            "name": "[concat(parameters('vaults_phillyts1057880103_name'), '/', parameters('secrets_workspace_secrets_390c1e10_c48d_4111_9028_c780380023d8_name'))]",
            "apiVersion": "2016-10-01",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "attributes": {
                    "enabled": true
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.KeyVault/vaults', parameters('vaults_phillyts1057880103_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.Network/networkSecurityGroups/WinDSVM-nsg/securityRules/RDP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_WinDSVM_nsg_name'), '/', parameters('securityRules_RDP_name'))]",
            "apiVersion": "2018-10-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1010,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_WinDSVM_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/52061d21-01dd-4f9e-aca9-60fff4d67ee2/resourceGroups/rgAMLS/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_demo_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2018-10-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24",
                "delegations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_demo_vnet_name'))]"
            ]
        }
    ]
}
